// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createArray > should return an array with 4 items starting at +0 1`] = `
[
  0,
  1,
  2,
  3,
]
`;

exports[`createArray > should return an array with 10 items starting at 1 1`] = `
[
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
]
`;

exports[`createArray > should return an array with 10 items starting at 5 1`] = `
[
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
]
`;

exports[`sortByLocaleCompare > should sort an array in 'english' 1`] = `
[
  "port",
  "Payment",
  "Mars",
  "cart",
  "Car",
  "asylum",
  "Asian",
]
`;

exports[`sortByLocaleCompare > should sort an array in 'french' 1`] = `
[
  "Adieu",
  "café",
  "Cliché",
  "communiqué",
  "Premier",
  "réservé",
]
`;

exports[`sortByLocaleCompare > should sort an array in 'numeric' 1`] = `
[
  "2",
  "2",
  "4",
  "8",
  "16",
  "24",
  "32",
  "48",
]
`;

exports[`sortByLocaleCompare > should sort an array in 'portuguese' 1`] = `
[
  "amô",
  "cachê",
  "côncavo",
  "limão",
  "Mãe",
  "tião",
]
`;

exports[`sortByLocaleCompare > should sort an object 'ascending' 1`] = `
[
  {
    "key": "amber",
  },
  {
    "key": "cyan",
  },
  {
    "key": "green",
  },
  {
    "key": "red",
  },
]
`;

exports[`sortByLocaleCompare > should sort an object 'descending' 1`] = `
[
  {
    "key": "red",
  },
  {
    "key": "green",
  },
  {
    "key": "cyan",
  },
  {
    "key": "amber",
  },
]
`;

exports[`sortByPrimitive > should sort an array by '-number-asc' 1`] = `
[
  1,
  2,
  2,
  3,
  4,
]
`;

exports[`sortByPrimitive > should sort an array by '-number-desc' 1`] = `
[
  4,
  3,
  2,
  2,
  1,
]
`;

exports[`sortByPrimitive > should sort an array by 'cycle-number-asc' 1`] = `
[
  {
    "cycle": 1,
  },
  {
    "cycle": 3,
  },
  {
    "cycle": 3,
  },
  {
    "cycle": 4,
  },
]
`;

exports[`sortByPrimitive > should sort an array by 'cycle-number-desc' 1`] = `
[
  {
    "cycle": 4,
  },
  {
    "cycle": 3,
  },
  {
    "cycle": 3,
  },
  {
    "cycle": 1,
  },
]
`;

exports[`sortByPrimitive > should sort an array by 'status-boolean-asc' 1`] = `
[
  {
    "cycle": 1,
    "status": false,
  },
  {
    "cycle": 4,
    "status": false,
  },
  {
    "cycle": 3,
    "status": true,
  },
  {
    "cycle": 3,
    "status": true,
  },
]
`;

exports[`sortByPrimitive > should sort an array by 'status-boolean-desc' 1`] = `
[
  {
    "cycle": 3,
    "status": true,
  },
  {
    "cycle": 3,
    "status": true,
  },
  {
    "cycle": 1,
    "status": false,
  },
  {
    "cycle": 4,
    "status": false,
  },
]
`;
